# Dokky

./: .gitignore  CLAUDE.md  LICENSE  README.md  cadrage.txt  index.html  package-lock.json  package.json
.github/workflows/: build.yml
scripts/: collect-deps.sh
src/: App.vue
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/resources/: .gitignore
src-tauri/src/: apk_manager.rs  config_manager.rs  device_manager.rs  error.rs  lib.rs  license_manager.rs  main.rs  paths.rs  process_ext.rs  scrcpy_server.rs  session_manager.rs
src/components/: ActionSidebar.vue  ConfirmModal.vue  Loader.vue  NewSessionDialog.vue  ProModal.vue  SessionTab.vue  SettingsPanel.vue  ShortcutOverlay.vue  StatusBar.vue  TabBar.vue  Toast.vue  VideoPlayer.vue
src/composables/: useClones.ts  useDevices.ts  useLicense.ts  useSessions.ts  useShortcuts.ts  useToast.ts  useVideoPreset.ts
src/styles/: variables.css
src/types/: index.ts
