[package]
name = "dokky"
version = "0.1.0"
description = "Multi-Instance Android Desktop App via scrcpy"
authors = ["florian"]
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "dokky_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.10.3", features = [] }
tauri-plugin-log = "2"
tokio = { version = "1", features = ["process", "sync", "time", "net", "io-util"] }
uuid = { version = "1", features = ["v4"] }
base64 = "0.22"
dirs = "6"
image = "0.25"
zip = "2"
glob = "0.3"
reqwest = { version = "0.12", features = ["json"] }
tauri-plugin-shell = "2.3.5"
